@@ -12,6 +12,9 @@ VDR 1.7.29 / 2.1.1
 	Erased channelsX.js
 	Subs prio can be set eq TV5 sends multiple subs. default "DUT, ENG"
 	Subtitle language can dynamic be chosen from settings menu (<menu> <1> <red>) if there is no subtitle present it resets to default.
+	Added Group 10 (channels >10000) for favorite
+	key @ switch to favorite list
+	key >@ add to favorite list
 
 
 
